fixed text break in comments

--- a/styles/css/shows.css
+++ b/styles/css/shows.css
@@ -665,6 +665,7 @@ a {
 }
 .comments__secondary-text {
   margin-top: 0;
+  word-break: break-word;
 }
 .comments__item {
   color: #afafaf;
