--- a/styles/partials/_comments.scss
+++ b/styles/partials/_comments.scss
@@ -43,6 +43,7 @@
 
   &__secondary-text {
     margin-top: 0;
+    word-break: break-word;
   }
 
   &__item {
